<resources>
    <string name="app_name">Lagu</string>
    <string name="find">Find</string>
    <string name="wishlist">Wishlist</string>
    <string name="calendar">Calendar</string>
    <string name="create">Create</string>
    <string name="logout">Log Out</string>
    <string name="sign_in_here">Sign In Here</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
