<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_find"
        android:title="@string/find"
        android:icon="@drawable/ic_find_in_page_black_24dp"
    />

    <item
        android:id="@+id/navigation_wishlist"
        android:title="@string/wishlist"
        android:icon="@drawable/ic_format_list_bulleted_black_24dp"
    />

    <item
        android:id="@+id/navigation_calendar"
        android:title="@string/calendar"
        android:icon="@drawable/ic_today_black_24dp"
    />

    <item
        android:id="@+id/navigation_create"
        android:title="@string/create"
        android:icon="@drawable/ic_create_black_24dp"
    />

    <item
        android:id="@+id/navigation_logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_account_circle_black_24dp"
    />

</menu>